--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,11 +4,10 @@
 # 4.!在前代表取反
 
 #IntelliJ IDEAproject files  项目的配置文件
-.idea/
 *.iml
 *.ipr
 *.iws
-.idea/
+.idea
 /.idea/workspace.xml
 /.idea/libraries
 
